Fixed layout for printing and collapsable sidebar

--- a/static/style.css
+++ b/static/style.css
@@ -84,7 +84,6 @@ main {
     width: 940px;
     max-width: 96vw;
     margin: 0 auto;
-    flex: 1 1 auto;
 }
 
 .important {
@@ -92,24 +91,21 @@ main {
     padding: 1rem 2ch;
 }
 
-main section > *:first-child {
+main > section > *:first-child {
     margin-top: 0;
 }
 
-main section > *:last-child {
+main > section > *:last-child {
     margin-bottom: 0;
 }
 
-main section {
+main > section:not(:first-child) {
     border-radius: var(--sl-border-radius-large);
-}
-
-main section:first-child:not(:last-child) {
-    margin-bottom: 2vmax;
+    margin: 2vmax 0;
 }
 
 body > footer {
-    width: 820px;
+    width: 940px;
     max-width: 96vw;
     margin: auto auto 0 auto;
     border-top: 1px solid var(--sl-color-neutral-300);
@@ -143,6 +139,7 @@ body > footer {
     margin-top: 2vmax;
 }
 
+
 @media screen and (max-width: 650px) {
     .form-footer {
         justify-content: flex-end;
@@ -155,80 +152,83 @@ form .date {
     gap: 1ch;
 }
 
-form {
+form, dl, table, ul, ol {
     max-width: 60ch;
 }
 
-.toolbar {
+.hero {
     display: flex;
-    gap: 1.5ch;
-    align-items: center;
-    justify-content: space-between;
+    flex-direction: column;
+    gap: .5vmax;
+    background-color: var(--sl-color-primary-700);
+    color: #fff;
+    padding: 1.66vmax;
+    font-size: 113%;
 }
 
-.toolbar > * {
+.hero > * {
     margin: 0 0;
 }
 
-article {
-    display: grid;
-    grid-template-columns: 1fr 3fr auto;
-    gap: 1.5vmax;
-    margin-top: 3vmax;
+.hero > .title {
+    font-size: 29pt;
 }
 
-article section {
-    grid-column: 2 / 3;
+article {
+    position: relative;
     counter-reset: section;
 }
 
-article aside {
-    grid-column: -1 / -2;
+.menu:is(ul, ol) {
+    margin: 0;
+    padding: 0;
+    list-style: none;
 }
 
-article section > *:is(h1, h2, h3, h4, h5, h6)::before {
+.menu:is(ul, ol) li {
+    padding: 0;
+    margin-bottom: .5em;
+}
+
+
+article > *:is(h1, h2, h3, h4, h5, h6)::before {
     counter-increment: section;
     content: counter(section) ".";
     margin-right: 1ch;
     font-size: 95%;
 }
 
-article section > *:is(h1, h2, h3, h4, h5, h6) {
+article > *:is(h1, h2, h3, h4, h5, h6) {
     border-top: 2px solid var(--sl-color-neutral-500);
     padding-top: .5ch;
 }
 
-article nav {
-    display: flex;
-    flex-direction: column;
-    gap: .5rem;
-    grid-column: 1 / 2;
-    grid-row: 1 / -1;
-    position: sticky;
-    top: 0;
-}
-
-article nav > *:is(h1, h2, h3, h4, h5, h6) {
+.left-sidebar nav *:is(h1, h2, h3, h4, h5, h6) {
     margin: 0;
     font-size: 1.04rem;
 }
 
-article section > *:is(h1, h2, h3, h4, h5, h6):not(:first-child) {
+.left-sidebar nav label {
+    width: 100%;
+}
+
+article > *:is(h1, h2, h3, h4, h5, h6):not(:first-child) {
     margin-top: 2.33rem;
 }
 
-article section > *:is(h1, h2, h3, h4, h5, h6) {
+article > *:is(h1, h2, h3, h4, h5, h6) {
     margin-bottom: 0;
 }
 
 
-article nav a {
+.left-sidebar nav a {
     font-size: .9rem;
 }
 
 article dl {
     display: grid;
     grid-template-columns: 40% 60%;
+    break-inside: auto;
 }
 
 article dt {
@@ -274,6 +274,10 @@ article ol li > *:is(h1, h2, h3, h4, h5, h6) {
     font-size: 1.05rem;
 }
 
+article li {
+    margin-bottom: 1.5vmax;
+}
+
 article li > p {
     margin: .33em 0;
 }
@@ -295,14 +299,87 @@ article table th {
     text-decoration: underline;
 }
 
-@media screen and (max-width: 740px) {
-    article > nav {
-        grid-column: 1 / -1;
-        margin-bottom: 2rem;
+.left-sidebar > nav {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: .5rem;
+    grid-column: 1 / 2;
+    grid-row: 1 / -1;
+    position: sticky;
+    top: 1.5vmax;
+    align-self: start;
+}
+
+.left-sidebar nav input[type="checkbox"] {
+    display: none;
+}
+
+.left-sidebar nav .buttons {
+    display: flex;
+    justify-content: stretch;
+    gap: 1ch;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin-top: 2vmax;
+}
+
+@media screen and (min-width: 633px) {
+    .left-sidebar {
+        display: flex;
+        gap: 2vmax
     }
 
-    article > section {
-        grid-column: 1 / -1;
+    .left-sidebar nav {
+        flex: 1 1 200px;
+    }
+
+    .left-sidebar article {
+        flex: 1 1 3fr;
+    }
+
+    .left-sidebar article *:is(h1, h2, h3, h4, h5, h6):first-child {
+        margin-top: 0;
+    }
+}
+
+@media screen and (max-width: 633px) {
+    .left-sidebar > nav {
+        position: relative;
+        top: 0;
+    }
+
+    .left-sidebar nav .buttons {
+        flex-direction: row;
+    }
+
+    .left-sidebar nav input[type="checkbox"] {
+        height: 0;
+        width: 0;
+        line-height: 0;
+        position: absolute;
+        visibility: hidden;
+    }
+
+    .left-sidebar nav input[type="checkbox"] ~ ul {
+        display: none;
+    }
+
+    .left-sidebar nav input[type="checkbox"] + .marker {
+        position: absolute;
+        right: 1vmax;
+    }
+
+    .left-sidebar nav input[type="checkbox"] + .marker::before {
+        content: "[Show]";
+    }
+
+    .left-sidebar nav input[type="checkbox"]:checked ~ ul {
+        display: block;
+    }
+
+    .left-sidebar nav input[type="checkbox"]:checked + .marker::before {
+        content: "[Hide]";
     }
 }
 
@@ -311,13 +388,12 @@ article table th {
     margin: 15mm 10mm 12mm 10mm;
 }
 
+
+/***** PRINT STYLES ******/
+
 @media print {
     :root {
         font-size: 11.5pt;
-    }
-
-    sl-button {
-        display: none;
     }
 
     a {
@@ -325,18 +401,12 @@ article table th {
         color: inherit;
     }
 
-    nav {
+    nav, sl-button, sl-breadcrumb, body > footer {
         display: none !important;
     }
 
     article {
         break-inside: auto;
-    }
-
-    article > section {
-        grid-column: 1 / -1;
-        break-inside: avoid;
-        break-after: auto;
     }
 
     #site-header h1 {
@@ -361,5 +431,13 @@ article table th {
 
     dt {
         break-after: avoid;
+    }
+
+    .hero {
+        display: flex;
+        flex-direction: column;
+        gap: .5vmax;
+        padding: 0px;
+        font-size: 113%;
     }
 }
